[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "incident-resolution-agent"
version = "0.1.0"
description = "AI-assisted incident resolution workflow with log analysis, runbook retrieval, and root cause reporting."
requires-python = ">=3.11"
dependencies = [
    "requests",
    "langchain-core",
    "langchain-text-splitters",
    "langchain-chroma",
    "langchain-huggingface",
    "chromadb",
    "sentence-transformers",
    "python-dotenv",
    "langgraph",
    "splunk-sdk",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
